--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
+    "ejs-mate": "^2.3.0",
     "express": "~4.15.2",
+    "goo.gl": "^0.1.4",
+    "google-url": "0.0.4",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2"
   }
