--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.15.2",
     "goo.gl": "^0.1.4",
     "google-url": "0.0.4",
+    "js-beautify": "^1.6.14",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2"
   }
